# dictionary_service

./: .coveragerc  .gitignore  Makefile  Procfile  README.md  manage.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: django.yml
config/: .env.example
locale/ru/LC_MESSAGES/: django.mo  django.po
requirements/: base.txt  local.txt
server/: urls.py  wsgi.py
server/apps/api/: exception_handlers.py  urls.py
server/apps/core/: exception_handlers.py  exceptions.py
server/apps/dictionaries/: admin.py  apps.py  filters.py  misc.py  models.py  selectors.py  serializers.py  urls.py  views.py
server/apps/dictionaries/migrations/: 0001_initial.py  0002_alter_dictionary_id_alter_dictionaryelement_id_and_more.py
server/settings/: __init__.py
server/settings/components/: common.py  rest_framework.py  spectacular.py
server/settings/environments/: development.py  production.py
tests/test_apps/test_dictionaries/: factories.py  test_dictionary_model.py  test_urls.py
